force-app/main/default/objects/AI_Interaction__c/AI_Interaction__c.object-meta.xml
<CustomObject>
    <description>Audit log recording every AI assistance interaction. Tracks what the AI suggested, confidence level, grounding status, and the human agent's final decision. Used for operational reporting and AI governance.</description>
    <label>AI Interaction</label>
    <pluralLabel>AI Interactions</pluralLabel>
    <nameField>
        <label>AI Interaction Name</label>
        <type>AutoNumber</type>
        <displayFormat>AI-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>