force-app/main/default/objects/AI_Interaction__c/fields/Agent_Action__c.field-meta.xml
<CustomField>
    <fullName>Agent_Action__c</fullName>
    <description>The action taken by the human agent after reviewing the AI suggestion. Null until the agent acts. Feeds the Accepted/Edited/Rejected/Escalated dashboard metrics.</description>
    <label>Agent Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Edited</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>