force-app/main/default/objects/AI_Interaction__c/fields/AI_Task__c.field-meta.xml
<CustomField>
    <fullName>AI_Task__c</fullName>
    <description>The specific AI task that was performed for this interaction (Intent Classification, Summarisation, Response Drafting).</description>
    <label>AI Task</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intent Classification</fullName>
            </value>
            <value>
                <fullName>Summarisation</fullName>
            </value>
            <value>
                <fullName>Response Drafting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>