force-app/main/default/objects/AI_Interaction__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <description>Lookup to the parent Case record this AI interaction is associated with.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>AI Interactions</relationshipLabel>
    <relationshipName>AI_Interactions</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
    <type>Lookup</type>
</CustomField>