force-app/main/default/objects/AI_Interaction__c/fields/Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Score__c</fullName>
    <description>AI confidence score between 0.00 and 1.00. Scores below 0.70 trigger the low-confidence guardrail and suppress the AI suggestion.</description>
    <label>Confidence Score</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>