force-app/main/default/objects/AI_Interaction__c/fields/Grounded_Status__c.field-meta.xml
<CustomField>
    <fullName>Grounded_Status__c</fullName>
    <description>True if the AI suggestion was generated using content retrieved from Salesforce Knowledge articles. False if generated without a grounded source (increases risk of inaccuracy).</description>
    <label>Grounded in Knowledge</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>