force-app/main/default/objects/AI_Interaction__c/fields/Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>Override_Reason__c</fullName>
    <description>Optional free-text reason provided by the agent when editing or rejecting an AI suggestion. Helps identify patterns where the AI is consistently wrong for specific case types.</description>
    <label>Override Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>