force-app/main/default/objects/AI_Interaction__c/fields/Suggested_Response__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Response__c</fullName>
    <description>The full AI-generated draft response text shown to the agent for review. This is never sent to the customer automatically — it requires explicit agent approval.</description>
    <label>Suggested Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>